--- a/views/login.ejs
+++ b/views/login.ejs
@@ -63,12 +63,13 @@
                 <a href="index.html" class="app-brand-link gap-2">
                   <span class="app-brand-logo demo">
     
-                  </span>
-                  <span class="app-brand-text demo text-heading fw-bold">TraveMe</span>
+                    <span class="app-brand-logo demo">
+                      <img src="/images/trvme-logo.png" alt="Company Logo" class="company-logo ml-2" style="height: 40px;">
+                    </span>
                 </a>
               </div>
               <!-- /Logo -->
-              <h4 class="mb-1">Welcome to TraveMe!</h4>
+              <h4 class="mb-1">Welcome to TrVMe!</h4>
               <p class="mb-6">Fill details to sign-in to your account</p>
 
               <form id="loginForm" class="mb-6" action="#">
